Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6961

Can't add external tool directly

    XMLWordPrintable

Details

    • bdb5ecd1bc13137410c7dc4de8f6bfc7bf182011

    Description

      1. Select "Tools" -> "External" -> "Configure" from the menu.
      2. Click "Add" and select "Add Tool" from the drop-down menu.
        Nothing will happen at the GUI. Creator will print
        edit: index was invalid
        edit: editing failed
        

        to the command line.

      Instead, a reasonable default value should be set so that the user can add a tool directly. Additionally the menu should be grayed if an action is impossible.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              con Eike Ziller
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes