Fix adding external tools.

Task-number: QTCREATORBUG-6961
Task-number: QTCREATORBUG-6960

Change-Id: Ied0b01f5a43bdc187625c0b7aa98845588322e5d
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>